# gazprom-flights

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 35d3763ca7e5_base.py  3e23beee3d58_remove_fact_date_from_passenger_model.py  5fb4004a3a36_add_planning_date_in_passenger.py  aa6d0de1d962_add_flight_route_id_to_passenger.py  b8d0ce7a59b0_add_main_dispatcher_date_to_passenger.py  c7f2d3e4b5a6_add_flight_id_to_cargo.py
docs/: zayavka.docx  ОБРАЗЕЦ!!Список пассажиров.xlsx  Список_пассажиров_для_оформления_авиабилетов.xlsx
generated_docx/: flight_13_2012-12-12.docx  flight_14_2012-02-22.docx  flight_15_2012-12-12.docx  flight_1_2026-12-12.docx  flight_1_2026-12-13.docx  flight_2_2026-12-12.docx  flight_2_2026-12-23.docx  flight_3_2027-12-12.docx
src/: config.py  database.py  dependencies.py  security.py  templates_config.py
src/admin/: admin_auth.py  admin_views.py
src/crud/: excel_generator.py  flight.py
src/models/: aircraft_types.py  airport.py  cargo.py  department.py  flight.py  flight_route.py  flights.py  passenger.py  passenger_flight.py  pilot.py  user.py
src/parsers/: docs_parser.py
src/routes/: auth.py  department_director.py  dispatcher.py  main_dispatcher.py  transport_dispatcher.py
src/schemas/: auth.py  department_director.py  flight.py  user.py
templates/: base.html  login.html
templates/department_director/: cargo_dashboard.html  dashboard.html
templates/dispatcher/: cargo.html  create.html  dashboard.html  done_cargo.html  done_flights.html  edit.html  (+2 more)
(+12 files in other folders)
