[project]
name = "gazprom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "sqladmin>=0.23.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
